--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -38,4 +38,5 @@
     <string name="navigate_back_description">Zurück Aktion</string>
 
     <string name="system_default">System</string>
+    <string name="checkbox">Checkbox</string>
 </resources>
