--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -39,4 +39,5 @@
 
     <string name="system_default">System</string>
     <string name="checkbox">Checkbox</string>
+    <string name="mark_complete_description">Mark as Completed</string>
 </resources>
