--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
 
     <string name="save_task">Save Task</string>
     <string name="mark_complete_description">Mark as Completed</string>
+    <string name="edit_task_label">Edit Task</string>
 </resources>
