--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -41,4 +41,6 @@
     <string name="checkbox">Checkbox</string>
     <string name="mark_complete_description">Mark as Completed</string>
     <string name="edit_task_label">Edit Task</string>
+    <string name="sort_tasks_description">Sort Tasks</string>
+    <string name="filter_tasks_description">Filter Tasks</string>
 </resources>
