--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="save_task">Save Task</string>
     <string name="mark_complete_description">Mark as Completed</string>
     <string name="edit_task_label">Edit Task</string>
+    <string name="sort_tasks_description">Sort Tasks</string>
+    <string name="filter_tasks_description">Filter Tasks</string>
 </resources>
