--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -55,4 +55,7 @@
     <string name="filter_tasks_description">Filter Tasks</string>
     <string name="search_tasks_description">Search Tasks</string>
     <string name="open_navigation_menu">Open List Selecter</string>
+    <string name="less_options">less options</string>
+    <string name="more_options">more options</string>
+    <string name="task_description_label">Description</string>
 </resources>
