--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -68,4 +68,5 @@
     <string name="priority_low">Low</string>
     <string name="priority_high">High</string>
     <string name="priority_highest">Hightest</string>
+    <string name="mark_incomplete_description">task not completed</string>
 </resources>
