--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,19 @@
     <string name="placeholder">Placeholder</string>
     <string name="add_new_list">Add new List</string>
     <string name="delete_lists">Delete selected List(s)</string>
+    <!-- ... other strings ... -->
+    <string name="list_name_label">List Name</string>
+    <string name="save">Save</string>
+    <string name="add_new_list_dialog_title">Add New List</string>
+    <string name="rename_list_dialog_title">Rename List</string>
+    <string name="confirm_delete_title">Confirm Delete</string>
+    <string name="confirm_delete_message">Are you sure you want to delete the selected list(s)? This
+        action cannot be undone.
+    </string>
+    <string name="delete">Delete</string>
+
+
+    <!-- <string name="add_new_list">Add New List</string> -->
+
+    <!-- <string name="delete_lists">Delete Selected</string> -->
 </resources>
