--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -39,54 +39,46 @@
 
 
     <string name="system_default">System</string>
-    <string name="delete_task_description">Delete Task</string>
-    <string name="add_task_description">Add Task</string>
-    <string name="new_task_label">New Task</string>
-    <string name="no_tasks_message">No Tasks</string>
-    <string name="settings_menu_item_description">Open Settings</string>
-    <string name="settings_menu_item">Settings</string>
-    <string name="menu_description">Open Menu</string>
+    <string name="delete_task_description">Aufgabe löschen</string>
+    <string name="add_task_description">Aufgabe hinzufügen</string>
+    <string name="new_task_label">Neue Aufgabe</string>
+    <string name="no_tasks_message">Keine Aufgaben</string>
+    <string name="settings_menu_item_description">Öffne Einstellungen</string>
+    <string name="settings_menu_item">Einstellungen</string>
+    <string name="menu_description">Öffne Menü</string>
     <string name="checkbox">Checkbox</string>
 
-    <string name="save_task">Save Task</string>
-    <string name="mark_complete_description">Mark as Completed</string>
-    <string name="edit_task_label">Edit Task</string>
-    <string name="sort_tasks_description">Sort Tasks</string>
-    <string name="filter_tasks_description">Filter Tasks</string>
-    <string name="search_tasks_description">Search Tasks</string>
-    <string name="open_navigation_menu">Open List Selecter</string>
-    <string name="less_options">less options</string>
-    <string name="more_options">more options</string>
-    <string name="task_description_label">Description</string>
-    <string name="task_has_description">Describtion available</string>
-    <string name="task_has_notification">Nofitication</string>
-    <string name="task_is_important">Is Important</string>
-    <string name="task_is_very_important">Is very Important</string>
-    <string name="task_has_steps">Steps</string>
-    <string name="task_has_attachments">Attachments</string>
-    <string name="priority_label">Priority</string>
-    <string name="priority_low">Low</string>
-    <string name="priority_high">High</string>
-    <string name="priority_highest">Hightest</string>
-    <string name="mark_incomplete_description">task not completed</string>
-    <string name="my_tasklist">My Tasklist</string>
+    <string name="save_task">Aufgabe speichern</string>
+    <string name="mark_complete_description">Als Vollständige markieren</string>
+    <string name="edit_task_label">Aufgabe bearbeiten</string>
+    <string name="sort_tasks_description">Aufgabe sortieren</string>
+    <string name="filter_tasks_description">Aufgabe filtern</string>
+    <string name="search_tasks_description">Aufgabe suchen</string>
+    <string name="open_navigation_menu">Öffne Navigation</string>
+    <string name="less_options">weniger Optionen</string>
+    <string name="more_options">mehr Optionen</string>
+    <string name="task_description_label">Beschreibung</string>
+    <string name="task_has_description">Beschreibung vorhanden</string>
+    <string name="task_has_notification">Benachrichtigung vorhanden</string>
+    <string name="task_is_important">Ist Wichtig</string>
+    <string name="task_is_very_important">Ist sehr Wichtig</string>
+    <string name="task_has_steps">Schritte vorhanden</string>
+    <string name="task_has_attachments">Anhang vorhanden</string>
+    <string name="priority_label">Priorität</string>
+    <string name="priority_low">Niedrig</string>
+    <string name="priority_high">Hoch</string>
+    <string name="priority_highest">Höchste</string>
+    <string name="mark_incomplete_description">Als Unvollständig markieren</string>
+    <string name="my_tasklist">Meine Aufgabelisten</string>
     <string name="placeholder">Placeholder</string>
-    <string name="add_new_list">Add new List</string>
-    <string name="delete_lists">Delete selected List(s)</string>
+    <string name="add_new_list">Neue Liste hinzufügen</string>
+    <string name="delete_lists">Lösche ausgewählte Liste(n)</string>
+    <string name="list_name_label">Listen Name</string>
+    <string name="save">Speichern</string>
+    <string name="add_new_list_dialog_title">Neue Liste hinzufügen</string>
+    <string name="rename_list_dialog_title">Liste umbenennen</string>
+    <string name="confirm_delete_title">Löschen bestätigen</string>
+    <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählten Listen löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
+    <string name="delete">Löschen</string>
 
-
-    <string name="list_name_label">List Name</string>
-    <string name="save">Save</string>
-    <string name="add_new_list_dialog_title">Add New List</string>
-    <string name="rename_list_dialog_title">Rename List</string>
-    <string name="confirm_delete_title">Confirm Delete</string>
-    <string name="confirm_delete_message">Are you sure you want to delete the selected list(s)? This
-        action cannot be undone.
-    </string>
-    <string name="delete">Delete</string>
-
-
-    <!-- <string name="add_new_list">Add New List</string> -->
-
-    <!-- <string name="delete_lists">Delete Selected</string> -->
 </resources>
