--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -80,7 +80,7 @@
     <string name="confirm_delete_title">Löschen bestätigen</string>
     <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählten Listen löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
     <string name="delete">Löschen</string>
-    <string name="select_date">wähle Datum</string>
-    <string name="select_time">wähle Zeit</string>
+    <string name="select_date">wähle\nDatum</string>
+    <string name="select_time">wähle\nZeit</string>
 
 </resources>
