--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ToDo-Liste</string>
-
+    <string name="app_name">To-Do</string>
+    <string name="todo_sheet_title">To-Do Listen</string>
     <string name="settings">Einstellungen</string>
 
     <string name="theme">Theme</string>
@@ -78,7 +78,7 @@
     <string name="add_new_list_dialog_title">Neue Liste hinzufügen</string>
     <string name="rename_list_dialog_title">Liste umbenennen</string>
     <string name="confirm_delete_title">Löschen bestätigen</string>
-    <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählten Listen löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
+    <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählte(n) Liste(n) löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
     <string name="delete">Löschen</string>
     <string name="select_date">wähle\nDatum</string>
     <string name="select_time">wähle\nZeit</string>
