--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="delete">Delete</string>
     <string name="select_date">select\nDate</string>
     <string name="select_time">select\nTime</string>
+    <string name="blacked_out">Blacked-out</string>
 </resources>
