--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -82,6 +82,7 @@
     <string name="delete">Löschen</string>
     <string name="select_date">wähle\nDatum</string>
     <string name="select_time">wähle\nZeit</string>
-    <string name="blacked_out">Blacked-out</string>
+    <string name="blacked_out">Ausgeschwärzt</string>
+    <string name="blacked_out_description">Dunkelt Darkmode noch mehr ab.</string>
 
 </resources>
