--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="blacked_out_description">Make Darkmode even darker.</string>
     <string name="descending_label">Descending</string>
     <string name="ascending_label">Ascending</string>
+    <string name="reset">Reset</string>
 </resources>
