--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -80,12 +80,17 @@
     <string name="confirm_delete_title">Löschen bestätigen</string>
     <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählte(n) Liste(n) löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
     <string name="delete">Löschen</string>
-    <string name="select_date">wähle\nDatum</string>
-    <string name="select_time">wähle\nZeit</string>
+    <string name="select_date_title">Datum auswählen</string>
+    <string name="select_date">Datum\auswählen</string>
+    <string name="select_time_title">Zeit auswählen</string>
+    <string name="select_time">Zeit\nauswählen</string>
     <string name="blacked_out">Ausgeschwärzt</string>
     <string name="blacked_out_description">Dunkelt Darkmode noch mehr ab.</string>
-    <string name="descending_label">Descending</string>
-    <string name="ascending_label">Ascending</string>
-    <string name="reset">Reset</string>
+    <string name="descending_label">Absteigend</string>
+    <string name="ascending_label">Aufsteigend</string>
+    <string name="reset">Zurücksetzen</string>
+    <string name="reset_settings">Alle Einstellungen zurücksetzen</string>
+    <string name="reset_settings_dialog_title">Alle Einstellungen zurücksetzen?</string>
+    <string name="reset_settings_dialog_description">Bist du sicher, dass du alle Einstellungen zurücksetzen willst?</string>
 
 </resources>
