--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -81,7 +81,7 @@
     <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählte(n) Liste(n) löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
     <string name="delete">Löschen</string>
     <string name="select_date_title">Datum auswählen</string>
-    <string name="select_date">Datum\auswählen</string>
+    <string name="select_date">Datum\nauswählen</string>
     <string name="select_time_title">Zeit auswählen</string>
     <string name="select_time">Zeit\nauswählen</string>
     <string name="blacked_out">Ausgeschwärzt</string>
@@ -92,5 +92,7 @@
     <string name="reset_settings">Alle Einstellungen zurücksetzen</string>
     <string name="reset_settings_dialog_title">Alle Einstellungen zurücksetzen?</string>
     <string name="reset_settings_dialog_description">Bist du sicher, dass du alle Einstellungen zurücksetzen willst?</string>
+    <string name="include">Include</string>
+    <string name="exclude">Exclude</string>
 
 </resources>
