Added timeformat to the settings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -94,5 +94,8 @@
     <string name="reset_settings_dialog_description">Bist du sicher, dass du alle Einstellungen zurücksetzen willst?</string>
     <string name="include">Include</string>
     <string name="exclude">Exclude</string>
+    <string name="time_format">Time format</string>
+    <string name="date_format">Date format</string>
+    <string name="date_time_format"><![CDATA[Time & Date format]]></string>
 
 </resources>
