--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -98,5 +98,9 @@
     <string name="date_format">Datumsformat</string>
     <string name="date_time_format"><![CDATA[Zeit & Datums Format]]></string>
     <string name="search">Suche</string>
+    <string name="add_new_step">Add new Step</string>
+    <string name="steps">Steps</string>
+    <string name="no_steps">No Steps</string>
+    <string name="remove_step">Delete Step</string>
 
 </resources>
