Add Undo Snackbar

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -102,5 +102,7 @@
     <string name="steps">Steps</string>
     <string name="no_steps">No Steps</string>
     <string name="remove_step">Delete Step</string>
+    <string name="undo">Undo</string>
+    <string name="no_search_results">No search results</string>
 
 </resources>
