--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="remove_step">Delete Step</string>
     <string name="undo">Undo</string>
     <string name="no_search_results">No search results</string>
+    <string name="task_text">Task</string>
+    <string name="deleted_text">deleted</string>
 </resources>
