Build Cutsom TextField for Searchfield, needed further code changes

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -106,5 +106,6 @@
     <string name="no_search_results">Keine Suchergebnisse</string>
     <string name="task_text">Aufgabe</string>
     <string name="deleted_text">gelöscht</string>
+    <string name="task_name">Task Name</string>
 
 </resources>
