--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -114,5 +114,6 @@
     <string name="developer_mode_enabled">Developer mode enabled!</string>
     <string name="taps_remaining_to_developer">You are now %d steps away from being a developer.</string>
     <string name="show_dummy_profile_title">Enable Fake Google Profile</string>
+    <string name="restart_app_description">restart app</string>
 
 </resources>
