--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">To-Do(beta)</string>
+    <string name="app_name">To-Do</string>
     <string name="todo_sheet_title">To-Do Listen</string>
     <string name="settings">Einstellungen</string>
 
