--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,10 +81,9 @@
         action cannot be undone.
     </string>
     <string name="delete">Delete</string>
-    <string name="select_date_title">select Date</string>
-    <string name="select_date">select\nDate</string>
-    <string name="select_time_title">select Time</string>
-    <string name="select_time">select\nTime</string>
+    <string name="select_date">select Date</string>
+    <string name="select_time_title">Select time</string>
+    <string name="select_time">select Time</string>
     <string name="blacked_out">Blacked-out</string>
     <string name="blacked_out_description">Make Darkmode even darker.</string>
     <string name="descending_label">Descending</string>
