--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -72,13 +72,19 @@
     <string name="my_tasklist">Meine Aufgabelisten</string>
     <string name="placeholder">Placeholder</string>
     <string name="add_new_list">Neue Liste hinzufügen</string>
-    <string name="delete_lists">Lösche ausgewählte Liste(n)</string>
+    <plurals name="delete_lists">
+        <item quantity="one">Ausgewählte Liste löschen</item>
+        <item quantity="other">Ausgewählte Listen löschen</item>
+    </plurals>
     <string name="list_name_label">Listen Name</string>
     <string name="save">Speichern</string>
     <string name="add_new_list_dialog_title">Neue Liste hinzufügen</string>
     <string name="rename_list_dialog_title">Liste umbenennen</string>
     <string name="confirm_delete_title">Löschen bestätigen</string>
-    <string name="confirm_delete_message">Bist du sicher, dass du die ausgewählte(n) Liste(n) löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</string>
+   <plurals name="confirm_delete_lists_message">
+        <item quantity="one">Bist du sicher, dass du die ausgewählte Liste löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</item>
+        <item quantity="other">Bist du sicher, dass du die ausgewählten Listen löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.</item>
+    </plurals>
     <string name="delete">Löschen</string>
     <string name="select_date">wähle Datum</string>
     <string name="select_time_title">Zeit auswählen</string>
