--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,15 +71,19 @@
     <string name="my_tasklist">My Tasklist</string>
     <string name="placeholder">Placeholder</string>
     <string name="add_new_list">Add new List</string>
-    <string name="delete_lists">Delete selected List(s)</string>
     <string name="list_name_label">List Name</string>
     <string name="save">Save</string>
     <string name="add_new_list_dialog_title">Add New List</string>
     <string name="rename_list_dialog_title">Rename List</string>
+    <plurals name="delete_lists">
+        <item quantity="one">Delete selected list</item>
+        <item quantity="other">Delete selected lists</item>
+    </plurals>
     <string name="confirm_delete_title">Confirm Delete</string>
-    <string name="confirm_delete_message">Are you sure you want to delete the selected list(s)? This
-        action cannot be undone.
-    </string>
+    <plurals name="confirm_delete_lists_message">
+        <item quantity="one">Are you sure you want to delete the selected list? This action cannot be undone.</item>
+        <item quantity="other">Are you sure you want to delete the selected lists? This action cannot be undone.</item>
+    </plurals>
     <string name="delete">Delete</string>
     <string name="select_date">select Date</string>
     <string name="select_time_title">Select time</string>
